<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_lista_disciplinas"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/lista_disciplinas" />
        <item
            android:id="@+id/nav_minha_matricula"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/minha_matricula" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/logout" />
    </group>

</menu>
