<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.unifor.matricula.login.CadastroUsuario">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:id="@+id/et_cadastro_nome"
        android:hint="@string/nome"
        android:inputType="textPersonName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:layout_below="@+id/et_cadastro_nome"
        android:layout_marginTop="30dp"
        android:id="@+id/et_cadastro_email"
        android:hint="@string/email" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/et_cadastro_email"
        android:layout_marginTop="30dp"
        android:id="@+id/et_cadastro_senha"
        android:hint="@string/senha"
        android:inputType="textPassword" />

    <Button
        android:text="@string/cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_cadastro_senha"
        android:layout_marginTop="40dp"
        android:id="@+id/bt_cadastro" />

</RelativeLayout>
