<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.unifor.matricula.login.Login">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:id="@+id/til_login_usuario">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usuario"
            android:id="@+id/et_login_email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_login_usuario"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:id="@+id/til_login_senha">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:id="@+id/et_login_senha"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:text="@string/cadastre_se"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_login_senha"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:id="@+id/tv_login_cadastro"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_cadastro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:id="@+id/bt_login_Entrar" />
</RelativeLayout>
